# CPS-ICS-Defender

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml  scenarios.yaml
docs/: architecture.md
scripts/: demo.py  generate_dataset.py  serve.py  train_detector.py  train_rl.py
src/cps_defender/: __init__.py
src/cps_defender/api/: __init__.py  app.py  engine.py
src/cps_defender/api/templates/: index.html
src/cps_defender/core/: __init__.py  config.py  events.py  logging_setup.py  models.py
src/cps_defender/genai/: __init__.py  augmenter.py
src/cps_defender/ids/: __init__.py  feature_extractor.py  pipeline.py
src/cps_defender/ids/detectors/: __init__.py  ml_detector.py  rule_based.py  statistical.py
src/cps_defender/rl/: __init__.py  agent.py  environment.py
src/cps_defender/sdn/: __init__.py  controller.py  mitigation.py
src/cps_defender/testbed/: __init__.py  traffic_sim.py
tests/: conftest.py  test_ids.py  test_integration.py  test_sdn_rl.py
zeek/: README.md
zeek/scripts/: dnp3_monitor.zeek  ics_anomaly.zeek  log_to_json.zeek
