[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cps-ics-defender"
version = "0.1.0"
description = "Zeek-based IDS + SDN mitigation + RL adaptive response for CPS/ICS networks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Anusha Khan", email = "anusha@example.com" },
]
keywords = ["ics", "scada", "dnp3", "ids", "intrusion-detection", "sdn", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cps-demo     = "cps_defender.__main__:demo"
cps-train    = "cps_defender.__main__:train"
cps-generate = "cps_defender.__main__:generate"

[project.urls]
Homepage   = "https://github.com/anushakhan/cps-ics-defender"
Repository = "https://github.com/anushakhan/cps-ics-defender"
Issues     = "https://github.com/anushakhan/cps-ics-defender/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/cps_defender"]
omit   = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
